test/libsolidity/syntaxTests/abstract/unimplemented_functions.sol
contract A {
    function a() public;
}
// ----
// TypeError: (0-39): Contract "A" should be marked as abstract.
